Test/senamic_test/jlj_test/test3.output
Error type 5 at Line 5: Type mismatched for assignment "="
Error type 9 at Line 23: Function is not applicable for arguments ""
Error type 7 at Line 24: Type mismatched for operands ""
Error type 7 at Line 25: Type mismatched for operands ""
Error type 9 at Line 30: Function is not applicable for arguments ""
