Test/senamic_test/jlj_test/test3.cmm
// test array;
int func(int a[10][10][10][10]){
    int b[2][50];
    a[10][10] = b;
    a[10][10][10] = b;  // error 5;
}

struct A{
    int b[10][10][10][10];
};

int func2(struct A{int b[10][10][10][10];} a){
    return 2;
}

int main(){
    struct A a;
    int b[20][5][10][10];
    int c[20][5][10];
    int d[20][5][5][5][5];
    int e[2][10][10][10][10];
    func(b);
    func(b[10]);        // error 9;
    c + b;              // error 7;
    c + b[20];          // error 7;
    c[1][1][1] + b[1][1][1][1];
    func(d[1]);         // error 9;
    func(e[0]);
    func(a.b);
    func(a.b[0]);       // error 9;
    func2(a);
}